src/test/ui/issues/issue-36299.stderr
error[E0392]: parameter `'a` is never used
  --> $DIR/issue-36299.rs:1:12
   |
LL | struct Foo<'a, A> {}
   |            ^^ unused parameter
   |
   = help: consider removing `'a`, referring to it in a field, or using a marker such as `PhantomData`

error[E0392]: parameter `A` is never used
  --> $DIR/issue-36299.rs:1:16
   |
LL | struct Foo<'a, A> {}
   |                ^ unused parameter
   |
   = help: consider removing `A`, referring to it in a field, or using a marker such as `PhantomData`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0392`.
